# hermes-agent-nt

./: .gitignore  .markdownlint.jsonc  CLAUDE.md  Makefile  README.md  start.ps1  start.sh
bridge/: CONTEXT.md  README.md  pyproject.toml
bridge/hermes_bridge/: __init__.py  agent_client.py  brain_health.py  claude_agent.py  claude_cli.py  cli.py  config.py  dashboard.py  engine.py  indicators.py  journal.py  levels.py  market_calendar.py  memory.py  models.py  news.py  plan.py  prompts.py  prop_firms.py  reauthor.py  reflect.py  replay_sim.py  resample.py  resilient_brain.py  risk.py  server.py  session.py  stops.py  store.py  views.py
bridge/replay/: gen_sample.py  sample_bars.csv
bridge/scripts/: backfill_counterfactuals.py  calibrate.py  repair_journal_ts.py  rescore_gates.py
bridge/tests/: conftest.py  test_agent_client.py  test_agent_helpers.py  test_armed_plan.py  test_brain_health.py  test_calendar_engine.py  test_claude_agent.py  test_claude_cli.py  test_claude_memory.py  test_claude_session.py  test_commission.py  test_config.py  test_config_claude.py  test_config_learning.py  test_config_local_override.py  test_config_reflect.py  test_config_strict.py  test_config_validation.py  test_consolidate.py  test_counterfactual_engine.py  test_counterfactuals.py  test_daily_levels.py  test_dashboard_age.py  test_dashboard_news.py  test_distill.py  test_engine_journal.py  test_engine_mock.py  test_engine_reflect.py  test_eod_review.py  test_indicators.py  test_journal.py  test_latency_guard.py  test_levels.py  test_market_calendar.py  test_memory.py  test_news.py  (+27 more)
(+43 files in other folders)
